crates/reinhardt-urls/crates/routers-macros/tests/ui/fail/unmatched_close_brace.rs
use reinhardt_routers_macros::path;

fn main() {
	// Error: unmatched closing brace '}'
	let _path = path!("/users/id}/");
}
